--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,3 +1,12 @@
+@media screen and (max-width:710px) {
+    .erro {
+        width: 100%;
+        margin: 0;
+        text-align: center;
+        font-size: 23px;
+    }
+}
+
 @media screen and (max-width:636px) {
     .descricao {
         float: left;
@@ -7,6 +16,10 @@
     .descPerfil {
         float: left;
         width: 100%;
+    }
+
+    .erro {
+        font-size: 19px;
     }
 }
 
