Signed-off-by: luizh3nrique <luizh3nrique00@gmail.com>

--- a/style/style.css
+++ b/style/style.css
@@ -13,11 +13,6 @@ body {
     background-color: #0e1e2c;
 }
 
-body,
-html {
-    overflow-y: hidden;
-}
-
 
 .container {
     width: 100%;
@@ -31,6 +26,7 @@ html {
     width: 100%;
     max-width: 50em;
     height: 660px;
+    position: relative;
 }
 
 .search {
@@ -78,12 +74,13 @@ html {
     cursor: pointer;
     font-size: 17px;
     transition: all .3s ease-in-out;
+    letter-spacing: 0.5px;
 }
 
 .search button:hover {
     transition: all .3s ease-in-out;
     background-color: #3279b8;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
 }
 
 
@@ -226,6 +223,56 @@ html {
 
 .link #blogApi {
     color: rgb(173, 173, 173);
+}
+
+.clear {
+    position: absolute;
+    bottom: -50px;
+    left: 42%;
+    width: 130px;
+    height: 30px;
+    font-size: 19px;
+    border: none;
+    background-color: #003360;
+    color: white;
+    font-weight: 500;
+    border-radius: 10px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    transition: .2s ease-in-out;
+}
+
+.clear:hover {
+    transition: .2s ease-in-out;
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.clear:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.clear::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.clear::after {
+    background-color: #003360;
+}
+
+.clear:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
 }
 
 .erro {
