--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,12 @@ body {
     color: #2a679d;
 }
 
+.search input:focus {
+    border: 1px solid #42a7ff;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.23);
+    transition: .5s ease-in-out;
+}
+
 .search button {
     position: absolute;
     right: 20px;
