--- a/style/style.css
+++ b/style/style.css
@@ -284,7 +284,7 @@ body {
 }
 
 .erro {
-    color: red;
+    color: rgb(255, 87, 87);
     font-weight: 500;
     font-size: 25px;
     width: 100%;
